chandeliers-lus/tests/compile_fail/ui/causality/undeclared-var.rs
//! Undeclared variable in node.
//! This should be caught by chandeliers, not rustc.
chandeliers_lus::decl! {
    node foo() returns (i: int);
    let i = absent; tel;
}

fn main() {}
